# ladies-game

./: CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
src/: board.c  board.h  data_type.c  data_type.h  game.c
